--- a/alimentos.html
+++ b/alimentos.html
@@ -18,270 +18,223 @@
       <div id="cabecalho">
         <img src="./img/pag-home/banner (2).png" alt="" id="banner">
         <img src="./img/pag-home/LOGO.png" alt="" id="logo">
-        <a href="#"><img src="" alt="" id="usuario"></a>
+        <a href="index.html"><img src="./img/alimentos/seta-esquerda-azul.png" alt="" id="seta"></a>
       </div>
 
       <a href="./index.html"><img src="" alt=""></a>
     </header>
 
     <main>
-        <h2 id="titulo">Colheita diária</h2>
-        <h3 id="subtitulo">Selecione os ailimentors desejaveis!</h3>
-
-    <section id="coleta-frutas">    
-        <h2 id="frutas">Frutas</h2>
-        <h4 id="laraja">Laranja</h4>
-        <div id="grupo-laranja">
-            <img src="" alt="" id="">
-            <p id="data-laranja">18/02 à 27/02</p>
-            <p id="local-laranja">Local</p>
-            <p id="horario-laranja">9:30 às 15:00</p>
-            <td class="btnDoc">
-                <button id="dados" data-confirm="" data-iddocumento="189738" data-descricao="teste1" type="button" class="btn btn-warning btn-xs 189738">Reservar</button>
-            </td>
-        </div>
-
-        <h4 id="tangerina">Tangerina</h4>
-        <div id="grupo-tangerina">
-            <img src="" alt="" id="">
-            <p id="data-tangerina">18/02 à 27/02</p>
-            <p id="local-tangerina">Local</p>
-            <p id="horario-tangerina">9:30 às 15:00</p>
-            <td class="btnDoc">
-                <button id="dados-tangerina" data-confirm="" data-iddocumento="189738" data-descricao="teste1" type="button" class="btn btn-warning btn-xs 189738">Reservar</button>
-            </td>
-        </div>
-
-        <h4 id="melao">Melão</h4>
-        <div id="grupo-melao">
-            <img src="" alt="" id="img-melao">
-            <p id="data-melao">18/02 à 27/02</p>
-            <p id="local-melao">Local</p>
-            <p id="horario-melao">9:30 às 15:00</p>
-            <td class="btnDoc">
-                <button id="dados-melao" data-confirm="" data-iddocumento="189738" data-descricao="teste1" type="button" class="btn btn-warning btn-xs 189738">Reservar</button>
-            </td>
-        </div>
-
-       <!-- <h4 id="laraja">Laranja</h4>
-        <div id="grupo-laranja">
-            <img src="" alt="" id="img-laranja">
-            <p id="data-laranja">18/02 à 27/02</p>
-            <p id="local-laranja">Local</p>
-            <p id="horario-laranja">9:30 às 15:00</p>
-            <td class="btnDoc">
-                <button id="dados" data-confirm="" data-iddocumento="189738" data-descricao="teste1" type="button" class="btn btn-warning btn-xs 189738">Reservar</button>
-            </td>
-        </div>
-
-        <h4 id="laraja">Laranja</h4>
-        <div id="grupo-laranja">
-            <img src="" alt="" id="img-laranja">
-            <p id="data-laranja">18/02 à 27/02</p>
-            <p id="local-laranja">Local</p>
-            <p id="horario-laranja">9:30 às 15:00</p>
-            <td class="btnDoc">
-                <button id="dados" data-confirm="" data-iddocumento="189738" data-descricao="teste1" type="button" class="btn btn-warning btn-xs 189738">Reservar</button>
-            </td>
-        </div>
-
-        <h4 id="laraja">Laranja</h4>
-        <div id="grupo-laranja">
-            <img src="" alt="" id="img-laranja">
-            <p id="data-laranja">18/02 à 27/02</p>
-            <p id="local-laranja">Local</p>
-            <p id="horario-laranja">9:30 às 15:00</p>
-            <td class="btnDoc">
-                <button id="dados" data-confirm="" data-iddocumento="189738" data-descricao="teste1" type="button" class="btn btn-warning btn-xs 189738">Reservar</button>
-            </td>
-        </div>
-
-        <h4 id="laraja">Laranja</h4>
-        <div id="grupo-laranja">
-            <img src="" alt="" id="img-laranja">
-            <p id="data-laranja">18/02 à 27/02</p>
-            <p id="local-laranja">Local</p>
-            <p id="horario-laranja">9:30 às 15:00</p>
-            <td class="btnDoc">
-                <button id="dados" data-confirm="" data-iddocumento="189738" data-descricao="teste1" type="button" class="btn btn-warning btn-xs 189738">Reservar</button>
-            </td>
-        </div>
-
-        <h4 id="laraja">Laranja</h4>
-        <div id="grupo-laranja">
-            <img src="" alt="" id="img-laranja">
-            <p id="data-laranja">18/02 à 27/02</p>
-            <p id="local-laranja">Local</p>
-            <p id="horario-laranja">9:30 às 15:00</p>
-            <td class="btnDoc">
-                <button id="dados" data-confirm="" data-iddocumento="189738" data-descricao="teste1" type="button" class="btn btn-warning btn-xs 189738">Reservar</button>
-            </td>
-        </div>
-
-       
-
-    </section>-->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <section id="coleta-legumes">
-        <h2 id="legumes">Legumes</h2>
-        <h4 id="cenoura">Cenoura</h4>
-        
+        <section id="regras">
+            <h2 id="titulo-regras">Regras de solicitação de Produtos:</h2>
+                <div id="grupo-regras">
+                    <ul id="lista">
+                        <li>Reservar somente de 1 à 5 tipos de alimentos, caso contrário não será reservado;</li>
+                        <li>Retirar o alimento no local em que realizou sua reserva;</li>
+                        <li>Será separado o alimento desejado no local de entrega, para que não aja desperdício de produtos;</li>
+                        <li>Especificações de horário, dias e local será localizado no carde de seleção;</li>
+                        <li>A solicitação de documento RG será necessária para retirada de alimentos;</li>
+                        </ul>
+                </div>
+                <img src="./img/alimentos/regra.png" alt="" id="img-regra">
+        </section>
+
+
+        <section id="container">
+            <h2 id="titulo">Colheita diária</h2>
+            <h3 id="subtitulo">Selecione os ailimentors desejaveis!</h3>
+
+        <section id="coleta-frutas">    
+            <h2 id="frutas">Frutas</h2>
+            <h4 id="laraja">Laranja</h4>
+            <div id="grupo-laranja">
+                <img src="./img/alimentos/laranja.png" alt="" id="">
+                <p id="data-laranja"> Validade: 18/02 à 27/02</p>
+                <p id="horario-laranja">Horário: 9:30 às 15:00</p>
+                <p id="local-laranja">Local: SalvaMais</p>
+                <td class="btnDoc">
+                    <button id="dados" data-confirm="" data-iddocumento="189738" data-descricao="teste1" type="button" class="btn btn-warning btn-xs 189738">Reservar</button>
+                </td>
+            </div>
+
+            <h4 id="tangerina">Tangerina</h4>
+            <div id="grupo-tangerina">
+                <img src="./img/alimentos/tangerina.png" alt="" id="">
+                <p id="data-tangerina"> Validade: 18/02 à 27/02</p>
+                <p id="horario-tangerina">Horário: 9:30 às 15:00</p>
+                <p id="local-tangerina">Local: SalvaMais</p>
+                <td class="btnDoc">
+                    <button id="dados" data-confirm="" data-iddocumento="189738" data-descricao="teste1" type="button" class="btn btn-warning btn-xs 189738">Reservar</button>
+                </td>
+            </div>
+
+            <h4 id="melao">Melão</h4>
+            <div id="grupo-melao">
+                <img src="./img/alimentos/melao.png" alt="" id="img-melao">
+                <p id="data-melao">Validade: 18/02 à 27/02</p>
+                <p id="local-melao">Local: SalvaMais</p>
+                <p id="horario-melao">Horário: 9:30 às 15:00</p>
+                <td class="btnDoc">
+                    <button id="dados" data-confirm="" data-iddocumento="189738" data-descricao="teste1" type="button" class="btn btn-warning btn-xs 189738">Reservar</button>
+                </td>
+            </div>
+
+            <h4 id="morango">Morango</h4>
+            <div id="grupo-morango">
+                <img src="./img/alimentos/morango.png" alt="" id="img-morango">
+                <p id="data-morango">Validade: 18/02 à 27/02</p>
+                <p id="local-morango">Local: SalvaMais</p>
+                <p id="horario-morango">Horário: 9:30 às 15:00</p>
+                <td class="btnDoc">
+                    <button id="dados" data-confirm="" data-iddocumento="189738" data-descricao="teste1" type="button" class="btn btn-warning btn-xs 189738">Reservar</button>
+                </td>
+            </div>
+
+            <h4 id="framboesa">Framboesa</h4>
+            <div id="grupo-framboesa">
+                <img src="./img/alimentos/framboesa.png" alt="" id="img-framboesa">
+                <p id="data-framboesa">Validade: 18/02 à 27/02</p>
+                <p id="local-framboesa">Local: SalvaMais</p>
+                <p id="horario-framboesa">Horário: 9:30 às 15:00</p>
+                <td class="btnDoc">
+                    <button id="dados" data-confirm="" data-iddocumento="189738" data-descricao="teste1" type="button" class="btn btn-warning btn-xs 189738">Reservar</button>
+                </td>
+            </div>
+
+            <h4 id="melancia">Melancia</h4>
+            <div id="grupo-melancia">
+                <img src="./img/alimentos/melancia.png" alt="" id="img-melancia">
+                <p id="data-melancia">Validade: 18/02 à 27/02</p>
+                <p id="local-melancia">Local: SalvaMais</p>
+                <p id="horario-melancia">Horário: 9:30 às 15:00</p>
+                <td class="btnDoc">
+                    <button id="dados" data-confirm="" data-iddocumento="189738" data-descricao="teste1" type="button" class="btn btn-warning btn-xs 189738">Reservar</button>
+                </td>
+            </div>
+
+            <h4 id="uva">Uva</h4>
+            <div id="grupo-uva">
+                <img src="./img/alimentos/uva.png" alt="" id="img-uva">
+                <p id="data-uva">Validade: 18/02 à 27/02</p>
+                <p id="local-uva">Local: SalvaMais</p>
+                <p id="horario-uva">Horário: 9:30 às 15:00</p>
+                <td class="btnDoc">
+                    <button id="dados" data-confirm="" data-iddocumento="189738" data-descricao="teste1" type="button" class="btn btn-warning btn-xs 189738">Reservar</button>
+                </td>
+            </div>
+
+            <h4 id="limao">Limão</h4>
+            <div id="grupo-limao">
+                <img src="./img/alimentos/limao.png" alt="" id="img-limao">
+                <p id="data-limao">Validade: 18/02 à 27/02</p>
+                <p id="local-limao">Local: SalvaMais</p>
+                <p id="horario-limao">Horário: 9:30 às 15:00</p>
+                <td class="btnDoc">
+                    <button id="dados" data-confirm="" data-iddocumento="189738" data-descricao="teste1" type="button" class="btn btn-warning btn-xs 189738">Reservar</button>
+                </td>
+            </div>
+        </section>
+
+        <section id="coleta-legumes">
+            <h2 id="legumes">Legumes</h2>
+            <h4 id="abobora">Abóbora</h4>
+            <div id="grupo-abobora">
+                <img src="./img/alimentos/abobora.png" alt="" id="img-abobora">
+                <p id="data-abobora">Validade: 18/02 à 27/02</p>
+                <p id="local-abobora">Local: SalvaMais</p>
+                <p id="horario-abobora">Horário: 9:30 às 15:00</p>
+                <td class="btnDoc">
+                    <button id="dados" data-confirm="" data-iddocumento="189738" data-descricao="teste1" type="button" class="btn btn-warning btn-xs 189738">Reservar</button>
+                </td>
+            </div>
+
+            <h4 id="cenoura">Cenoura</h4>
+            <div id="grupo-cenoura">
+                <img src="./img/alimentos/cenoura.png" alt="" id="img-cenoura">
+                <p id="data-cenoura">Validade: 18/02 à 27/02</p>
+                <p id="local-cenoura">Local: SalvaMais</p>
+                <p id="horario-cenoura">Horário: 9:30 às 15:00</p>
+                <td class="btnDoc">
+                    <button id="dados" data-confirm="" data-iddocumento="189738" data-descricao="teste1" type="button" class="btn btn-warning btn-xs 189738">Reservar</button>
+                </td>
+            </div>
+
+            <h4 id="batata">Batata</h4>
+            <div id="grupo-batata">
+                <img src="./img/alimentos/batata.png" alt="" id="img-batata">
+                <p id="data-batata">Validade: 18/02 à 27/02</p>
+                <p id="local-batata">Local: SalvaMais</p>
+                <p id="horario-batata">Horário: 9:30 às 15:00</p>
+                <td class="btnDoc">
+                    <button id="dados" data-confirm="" data-iddocumento="189738" data-descricao="teste1" type="button" class="btn btn-warning btn-xs 189738">Reservar</button>
+                </td>
+            </div>
+
+            <h4 id="rabanete">Rabanete</h4>
+            <div id="grupo-rabanete">
+                <img src="./img/alimentos/rabanete.png" alt="" id="img-rabanete">
+                <p id="data-rabanete">Validade: 18/02 à 27/02</p>
+                <p id="local-rabanete">Local: SalvaMais</p>
+                <p id="horario-rabanete">Horário: 9:30 às 15:00</p>
+                <td class="btnDoc">
+                    <button id="dados" data-confirm="" data-iddocumento="189738" data-descricao="teste1" type="button" class="btn btn-warning btn-xs 189738">Reservar</button>
+                </td>
+            </div>
+
+            <h4 id="beterraba">Beterraba</h4>
+            <div id="grupo-beterraba">
+                <img src="./img/alimentos/beteraba.png" alt="" id="img-beterraba">
+                <p id="data-beterraba">Validade: 18/02 à 27/02</p>
+                <p id="local-beterraba">Local: SalvaMais</p>
+                <p id="horario-beterraba">Horário: 9:30 às 15:00</p>
+                <td class="btnDoc">
+                    <button id="dados" data-confirm="" data-iddocumento="189738" data-descricao="teste1" type="button" class="btn btn-warning btn-xs 189738">Reservar</button>
+                </td>
+            </div>
+
+            <h4 id="chuchu">Chuchu</h4>
+            <div id="grupo-chuchu">
+                <img src="./img/alimentos/xuxu.png" alt="" id="img-chuchu">
+                <p id="data-chuchu">Validade: 18/02 à 27/02</p>
+                <p id="local-chuchu">Local: SalvaMais</p>
+                <p id="horario-chuchu">Horário: 9:30 às 15:00</p>
+                <td class="btnDoc">
+                    <button id="dados" data-confirm="" data-iddocumento="189738" data-descricao="teste1" type="button" class="btn btn-warning btn-xs 189738">Reservar</button>
+                </td>
+            </div>
+
+            <h4 id="berinjela">Berinjela</h4>
+            <div id="grupo-berinjela">
+                <img src="./img/alimentos/berinjela.png" alt="" id="img-berinjela">
+                <p id="data-berinjela">Validade: 18/02 à 27/02</p>
+                <p id="local-berinjela">Local: SalvaMais</p>
+                <p id="horario-berinjela">Horário: 9:30 às 15:00</p>
+                <td class="btnDoc">
+                    <button id="dados" data-confirm="" data-iddocumento="189738" data-descricao="teste1" type="button" class="btn btn-warning btn-xs 189738">Reservar</button>
+                </td>
+            </div>
+
+            <h4 id="repolho">Repolho</h4>
+            <div id="grupo-repolho">
+                <img src="./img/alimentos/repolho.png" alt="" id="img-repolho">
+                <p id="data-repolho">Validade: 18/02 à 27/02</p>
+                <p id="local-repolho">Local: SalvaMais</p>
+                <p id="horario-repolho">Horário: 9:30 às 15:00</p>
+                <td class="btnDoc">
+                    <button id="dados" data-confirm="" data-iddocumento="189738" data-descricao="teste1" type="button" class="btn btn-warning btn-xs 189738">Reservar</button>
+                </td>
+            </div>
+        </section>
+        <hr id="linha1">
+        <hr id="linha2">
     </section>
-
-    <hr id="linha1">
-    <hr id="linha2">
-
         <section>
             <img src="./img/pag-home/mapa.svg" alt="" id="mapa">
           </section>
     </main>
 
     <footer>
-        <section>
+        <section id="container-contato">
             <h5 id="endereco">Estr. Antônio Severino, 1493 - Rubem Berta, Porto Alegre - RS, 91250-330</h5>
             <h5 id="email">comunicacao.cesmar@maristas.org.br</h5>
             <h5 id="telefone">(51) 3086-2300</h5>
